// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarRow renders correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <tr
    className="car-row "
    onClick={[Function]}
>
    <td
        className="text-col"
    >
        Audi
    </td>
    <td
        className="numeric-col"
    >
        12
    </td>
</tr>,
  "nodes": Array [
    <tr
      className="car-row "
      onClick={[Function]}
>
      <td
            className="text-col"
      >
            Audi
      </td>
      <td
            className="numeric-col"
      >
            12
      </td>
</tr>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CarRow
        acceleration={12}
        editEnabled={false}
        name="Audi"
        onClick={[Function]}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "acceleration": 12,
          "editEnabled": false,
          "name": "Audi",
          "onClick": [Function],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <tr
          className="car-row "
          onClick={[Function]}
>
          <td
                    className="text-col"
          >
                    Audi
          </td>
          <td
                    className="numeric-col"
          >
                    12
          </td>
</tr>,
        "_debugID": 2,
        "_renderedOutput": <tr
          className="car-row "
          onClick={[Function]}
>
          <td
                    className="text-col"
          >
                    Audi
          </td>
          <td
                    className="numeric-col"
          >
                    12
          </td>
</tr>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CarRow
    acceleration={12}
    editEnabled={false}
    name="Audi"
    onClick={[Function]}
/>,
}
`;

exports[`CarRow renders correctly in edit mode 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <tr
    className="car-row  edit-enabled"
    onClick={[Function]}
>
    <td
        className="text-col"
    >
        Audi
    </td>
    <td
        className="numeric-col"
    >
        12
    </td>
</tr>,
  "nodes": Array [
    <tr
      className="car-row  edit-enabled"
      onClick={[Function]}
>
      <td
            className="text-col"
      >
            Audi
      </td>
      <td
            className="numeric-col"
      >
            12
      </td>
</tr>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <CarRow
        acceleration={12}
        editEnabled={true}
        name="Audi"
        onClick={[Function]}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "acceleration": 12,
          "editEnabled": true,
          "name": "Audi",
          "onClick": [Function],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <tr
          className="car-row  edit-enabled"
          onClick={[Function]}
>
          <td
                    className="text-col"
          >
                    Audi
          </td>
          <td
                    className="numeric-col"
          >
                    12
          </td>
</tr>,
        "_debugID": 4,
        "_renderedOutput": <tr
          className="car-row  edit-enabled"
          onClick={[Function]}
>
          <td
                    className="text-col"
          >
                    Audi
          </td>
          <td
                    className="numeric-col"
          >
                    12
          </td>
</tr>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <CarRow
    acceleration={12}
    editEnabled={true}
    name="Audi"
    onClick={[Function]}
/>,
}
`;
